using apollo and file uploader gem

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -26,6 +26,7 @@ gem 'apollo_upload_server'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
+gem "rack-cors"
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.1.0', require: false
 
