--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "apollo-link-error": "^1.1.1",
     "apollo-link-http": "^1.5.5",
     "apollo-link-retry": "^2.2.5",
+    "apollo-upload-client": "^9.1.0",
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.6",
     "nuxt": "^2.0.0"
